# airfoil-optimization

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: default.yaml
data/cleaned/: data.xlsx
src/airfoil_opt/: __init__.py  cli.py  config.py  constraints.py  objectives.py  paths.py  plotting.py  reporting.py  utils.py
src/airfoil_opt/ga/: evaluation.py  operators.py  run.py  seeding.py  selection.py  termination.py
src/airfoil_opt/geometry/: cst.py
src/airfoil_opt/models/: surrogate.py
